Fix align-items when not wrapping

--- a/crates/ori-style/style/default/button.css
+++ b/crates/ori-style/style/default/button.css
@@ -5,7 +5,7 @@ button {
 	padding: 6px;
 
 	justify-content: center;
-	align-content: center;
+	align-items: center;
 
 	font-size: 1.5em;
 	color: #444444;
